--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,2 @@
-/*BASE*/
-@import "./helpers/variables";
-@import "./helpers/mixins";
-@import "./common";
+@import "./input";
+@import "./common"; 
